fixed layout issues for safari large display. Now moving to mobile display.

--- a/styles.css
+++ b/styles.css
@@ -326,35 +326,35 @@ body.menu-page .hero-content {
 
 .about-section {
     position: relative;
-    display: flex;
-    justify-content: center;
     width: 100%;
-    max-height: 715px;
     padding: 0 2rem;
     background-color: rgb(200, 245, 250);
     scroll-margin-top: 70px;
 }
 
 .about-content-wrapper {
-    display: flex;
-    align-items: stretch;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 2rem;
     padding: 2rem 0;
+    width: 70%;
+    margin: 0 auto;
+    height: 100%;
     
-}
-
-.about-left-column {
-    display: block;
-    margin-right: 1rem;
-    width: 50%;
-    float: left;
+    min-height: 600px;
 }
 
 .about-right-column {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
     align-items: center;
-    margin-left: 2rem;
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    min-height: 600px;
 }
 
 .hours-container {
@@ -363,7 +363,7 @@ body.menu-page .hero-content {
     padding: 2rem;
     border-radius: 8px;
     text-align: left;
-    max-width: 700px;
+    min-height: 300px;
 }
 
 .hours {
@@ -381,15 +381,13 @@ body.menu-page .hero-content {
 }
 
 .about-text-container {
-    flex: 1;
-    max-width: 700px;
     background-color: #980156;
     color: white;
     padding: 2rem;
     padding-bottom: 1rem;
     border-radius: 8px;
     display: block;
-    margin-bottom: 2rem;
+    min-height: 300px;
 }
 
 .about-text-container p {
@@ -401,7 +399,7 @@ body.menu-page .hero-content {
 .fleurons {
     display: flex;
     justify-content: center;
-    margin: 0;
+    margin-top: 1rem;
     
 }
 
@@ -419,9 +417,10 @@ body.menu-page .hero-content {
 }
 
 .pub-sign {
+    width: 100%;
     height: 100%;
-    width: auto;
-    max-width: 400px;
+    min-width: 400px;
+    min-height: 600px;
     object-fit: cover;
     border-radius: 8px;
 }
